# SSE

./: CMakeLists.txt  readme.md
TP1-files/: CMakeLists.txt
TP1-files/src/: copy-sse.c  copy_nosse.c  lib.h  majuscule.c  majusculeLib.h  majusculesse.c  maxnosse.c  maxsse.c  scalaire.c  scalairelib.h  scalairesse.c  sumnosse.c  sumsse.c  uint16Sum.c  uint16SumSSE.c  uint16lib.h
TP1-files/test/: test_adduint16.c  test_majuscule.c
TP1-files/tests/: test_majuscule.c  test_scalaire.c
TP2-files/: CMakeLists.txt
TP2-files/src/: matmul.c  matmul.h  matmul_bloc.c  matmul_bloc.h  matmul_bloc_sse.c  matmul_bloc_sse.h  matmul_scalaire.c  matmul_scalaire.h  matmul_scalaire_sse.c  matmul_scalaire_sse.h  matmul_scalaire_sse_16.c  matmul_scalaire_sse_8.c
TP2-files/tests/: matmul_bloc_sse_test.c  matmul_bloc_test.c  matmul_scalaire_sse_test.c  matmul_scalaire_sse_test_16.c  matmul_scalaire_test.c  matmul_test.c
